<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/confirm_fragment"
    android:orientation="vertical"
    android:layout_marginTop="20dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_title"
        android:textSize="32sp"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="8dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_confirm"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:text="@string/login_hint"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password_confirm"
        android:layout_marginVertical="10dp"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:text="@string/password_hint"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/firstname_confirm"
        android:layout_marginVertical="10dp"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:text="@string/firstname_hint"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lastname_confirm"
        android:layout_marginVertical="10dp"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:text="@string/lastname_hint"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/birthdate_confirm"
        android:layout_marginVertical="10dp"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:text="@string/birthdate_hint"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/phone_confirm"
        android:layout_marginVertical="10dp"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:text="@string/phone_hint"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email_confirm"
        android:layout_marginVertical="10dp"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:text="@string/mail_hint"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/interests_confirm"
        android:layout_marginVertical="10dp"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:text="@string/interests_hint"

        />
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/confirm_button"
        android:text="@string/confirm_signup"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        />

</LinearLayout>