<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/loginFragment">

    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loginLinear"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textSize="32sp"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="8dp"
            app:layout_constraintTop_toTopOf="parent"
            />
        <include
            layout="@layout/reusable_text_input"
            android:id="@+id/login_input"
            />
        <include
            android:id="@+id/password_input"
            layout="@layout/reusable_text_input"
            />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        app:layout_constraintTop_toBottomOf="@id/loginLinear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/submitLoginButton"
        android:text="@string/submit_button"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"
        android:enabled="false"
    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switchLoginText"
        app:layout_constraintTop_toBottomOf="@id/submitLoginButton"
        android:text="@string/switch_to_signup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        android:textStyle="italic"
        />
</androidx.constraintlayout.widget.ConstraintLayout>